[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/floor.png" type="Texture" id=1]
[ext_resource path="res://enviornmentComponents/floorTiles/tempTile.gd" type="Script" id=2]
[ext_resource path="res://assets/floorDip.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 4.5 )

[node name="tempTile" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="tileSprite" type="Sprite" parent="."]
position = Vector2( 0, 15 )
texture = ExtResource( 1 )

[node name="tileSprite2" type="Sprite" parent="."]
position = Vector2( 0, 15 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 4 )
collision_layer = 2

[node name="Position2D" type="Position2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
